--- a/src/app/style/footer.module.css
+++ b/src/app/style/footer.module.css
@@ -1,8 +1,8 @@
 
 
 .footer {
-    background-color: #333; 
-    color: white; 
+    background-color: #ce8282; 
+    color: black; 
     padding: 20px; 
     text-align: center; 
     position: relative; 
